force-app/main/default/objects/Vendor__c/fields/BalanceDue__c.field-meta.xml
<CustomField>
    <fullName>BalanceDue__c</fullName>
    <formula>TotalSales__c - TotalDrops__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>