force-app/main/default/objects/Vendor__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>