force-app/main/default/objects/Vendor__c/fields/TotalDrops__c.field-meta.xml
<CustomField>
    <fullName>TotalDrops__c</fullName>
    <label>Total Drops</label>
    <summarizedField>Drop__c.TotalDrop__c</summarizedField>
    <summaryForeignKey>Drop__c.Vendor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>