force-app/main/default/objects/Vendor__c/fields/TotalSales__c.field-meta.xml
<CustomField>
    <fullName>TotalSales__c</fullName>
    <label>Total Sales</label>
    <summarizedField>Load__c.Value__c</summarizedField>
    <summaryForeignKey>Load__c.Vendor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>